Add date aggregation
Co-authored-by: Torben Meyer <torben.meyer@bakdata.com>